Fixed colour issue on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3492,7 +3492,7 @@ input, select, textarea {
 			#banner {
 				padding: 7em 0 8.25em 0 ;
 				background-color: #6F3582;
-				background-image: linear-gradient(to top, rgba(28, 68, 135, 0.8), rgba(28, 68, 135, 0.8)), url("../../images/bg.png");
+				background-image: linear-gradient(to top, rgba(82, 50, 120, 0.8), rgba(82, 50, 120, 0.8)), url("../../images/bg.png");
 				background-size: auto,
  cover;
 				background-position: center,
@@ -3616,7 +3616,7 @@ input, select, textarea {
 		#wrapper > header {
 			padding: 9em 0 6.25em 0 ;
 			background-color: #6F3582;
-			background-image: linear-gradient(to top, rgba(28, 68, 135, 0.8), rgba(28, 68, 135, 0.8)), url("../../images/bg.png");
+			background-image: linear-gradient(to top, rgba(82, 50, 120, 0.8), rgba(82, 50, 120, 0.8)), url("../../images/bg.png");
 			background-size: auto,
  cover;
 			background-position: center,
